--- a/tasks/ssl.yml
+++ b/tasks/ssl.yml
@@ -19,8 +19,11 @@
     become: yes
 
   - name: Generate crt
-    command: openssl req -new -newkey rsa:2048 -sha1 -days 3650 -nodes -x509 -keyout /etc/ssl/logstash/logstash.key -out /etc/ssl/logstash/logstash.crt -config /etc/ssl/logstash/openssl.cnf
+    command: openssl req -new -newkey rsa:2048 -sha1 -days 3650 -nodes -x509 -keyout logstash.key -out logstash.crt -config openssl.cnf
     become: yes
+    args:
+      chdir: /etc/ssl/logstash/
+    tags: skip_ansible_lint
 
   - name: Replace elastalert config with password
     template: src=config.yaml dest=/opt/{{ ea_dir }}
