Change creds for first user

--- a/templates/log.conf
+++ b/templates/log.conf
@@ -95,72 +95,72 @@ output {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "laravel-%{+YYYY.MM.dd}"
-      user => ["{{ ror_user }}"]
-      password => ["{{ ror_pass }}"]
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
     }
   }
   if [type] == "horizon_email" {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "horizon-%{+YYYY.MM.dd}"
-      user => ["{{ ror_user }}"]
-      password => ["{{ ror_pass }}"]
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
     }
   }
   if [type] == "horizon_queue" {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "horizon-%{+YYYY.MM.dd}"
-      user => ["{{ ror_user }}"]
-      password => ["{{ ror_pass }}"]
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
     }
   }
   if [type] == "nginx_access" {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "nginx-%{+YYYY.MM.dd}"
-      user => ["{{ ror_user }}"]
-      password => ["{{ ror_pass }}"]
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
     }
   }
   if [type] == "nginx_error" {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "nginx-%{+YYYY.MM.dd}"
-      user => ["{{ ror_user }}"]
-      password => ["{{ ror_pass }}"]
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
     }
   }
   if [type] == "syslog" {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "syslog-%{+YYYY.MM.dd}"
-      user => ["{{ ror_user }}"]
-      password => ["{{ ror_pass }}"]
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
     }
   }
   if [type] == "ws_message" {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "websocket-%{+YYYY.MM.dd}"
-      user => ["{{ ror_user }}"]
-      password => ["{{ ror_pass }}"]
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
     }
   }
   if [type] == "ws_peak" {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "websocket-%{+YYYY.MM.dd}"
-      user => ["{{ ror_user }}"]
-      password => ["{{ ror_pass }}"]
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
     }
   }
   if [type] == "ws_api" {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "websocket-%{+YYYY.MM.dd}"
-      user => ["{{ ror_user }}"]
-      password => ["{{ ror_pass }}"]
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
     }
   }
 }
