change type nginx full log in logstash config file

--- a/templates/log.conf
+++ b/templates/log.conf
@@ -88,7 +88,7 @@ filter {
       convert => ["wsint", "integer"]
     }
   }
-  if [type] == "nginx_access_full" {
+  if [type] == "full_nginx_access" {
     grok {
       patterns_dir => "/etc/logstash/patterns"
       match => { "message" => '%{IPORHOST:remote_ip} - %{DATA:user_name} \[%{HTTPDATE:access_time}\] \"%{WORD:http_method} %{DATA:url} HTTP/%{NUMBER:http_version}\" %{NUMBER:response_code} \"%{DATA:referrer}\" \"%{DATA:agent}\" \"%{NUMBER:requst_time}\" \"%{NUMBER:body_bytes_sent}\" \"%{GREEDYDATA:request_body}\"' }
@@ -157,7 +157,7 @@ output {
       password => ["{{ creds[0].password }}"]
     }
   }
-  if [type] == "nginx_access_full" {
+  if [type] == "full_nginx_access" {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "full-nginx-%{+YYYY.MM.dd}"
