Add mysql-lag block in logstash config file

--- a/templates/log.conf
+++ b/templates/log.conf
@@ -27,6 +27,15 @@ filter {
       overwrite => [ "message" ]
     }
   }
+  if [type] == "mysql_lag" {
+    grok {
+      match => { "message" => "\[%{TIMESTAMP_ISO8601:logtime}\] %{DATA:env} %{NUMBER:lagtime}" }
+      overwrite => [ "message" ]
+    }
+    mutate {
+      convert => ["lagtime", "integer"]
+    }
+  }
   if [type] == "nginx_access" {
     grok {
       patterns_dir => "/etc/logstash/patterns"
@@ -137,6 +146,14 @@ output {
     elasticsearch {
       hosts => ["localhost:9200"]
       index => "horizon-%{+YYYY.MM.dd}"
+      user => ["{{ creds[0].username }}"]
+      password => ["{{ creds[0].password }}"]
+    }
+  }
+  if [type] == "mysql_lag" {
+    elasticsearch {
+      hosts => ["localhost:9200"]
+      index => "mysql-lag-%{+YYYY.MM.dd}"
       user => ["{{ creds[0].username }}"]
       password => ["{{ creds[0].password }}"]
     }
