--- a/templates/log.conf
+++ b/templates/log.conf
@@ -100,15 +100,18 @@ filter {
   if [type] == "full_nginx_access" {
     grok {
       patterns_dir => "/etc/logstash/patterns"
-      match => { "message" => '%{IPORHOST:remote_ip} - %{DATA:user_name} \[%{HTTPDATE:access_time}\] \"%{WORD:http_method} %{DATA:url} HTTP/%{NUMBER:http_version}\" %{NUMBER:response_code} \"%{DATA:referrer}\" \"%{DATA:agent}\" \"%{NUMBER:requst_time}\" \"%{NUMBER:body_bytes_sent}\" \"%{GREEDYDATA:request_body}\"' }
+      match => { "message" => '%{IPORHOST:remote_ip} - %{DATA:user_name} \[%{HTTPDATE:access_time}\] \"%{WORD:http_method} %{DATA:url} HTTP/%{NUMBER:http_version}\" %{NUMBER:response_code} %{NUMBER:body_bytes_sent} \"%{DATA:referrer}\" \"%{DATA:agent}\" \"%{DATA:http_x_forwarded_for}\" \"%{DATA:request_body}\" \"%{NUMBER:requst_time}\" \"{%{DATA:resp_body}}\" \"%{NUMBER:tc_user_id}\"' }
       overwrite => [ "message" ]
     }
     mutate {
-      convert => ["response", "integer"]
-      convert => ["bytes", "integer"]
-      convert => ["responsetime", "float"]
+      convert => ["response_code", "integer"]
+      convert => ["body_bytes_sent", "integer"]
+      convert => ["requst_time", "float"]
+      convert => ["tc_user_id", "integer"]
       remove_field => [ "log" ]
       gsub => [ "request_body", "\\x22", '"']
+      gsub => [ "request_body", "\\x0A", " "]
+      gsub => [ "request_body", "\\n", " "]
     }
     geoip {
       source => "remote_ip"
