--- a/templates/log.conf
+++ b/templates/log.conf
@@ -100,7 +100,7 @@ filter {
   if [type] == "full_nginx_access" {
     grok {
       patterns_dir => "/etc/logstash/patterns"
-      match => { "message" => '%{IPORHOST:remote_ip} - %{DATA:user_name} \[%{HTTPDATE:access_time}\] \"%{WORD:http_method} %{DATA:url} HTTP/%{NUMBER:http_version}\" %{NUMBER:response_code} %{NUMBER:body_bytes_sent} \"%{DATA:referrer}\" \"%{DATA:agent}\" \"%{DATA:http_x_forwarded_for}\" \"%{DATA:request_body}\" \"%{NUMBER:requst_time}\" \"{%{DATA:resp_body}}\" \"%{NUMBER:tc_user_id}\"' }
+      match => { "message" => "%{FULLNGINX}"}
       overwrite => [ "message" ]
     }
     mutate {
