--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,1 +1,6 @@
 ---
+generate_crt: "openssl req -x509 -batch -nodes -days 3650 \
+    -newkey rsa:2048 \
+    -keyout logstash.key \
+    -out logstash.crt \
+    -config logstash.cnf"
