--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: auth-elk
   author: Igor Bronovskyi
   description: Install Filebeat on testing servers
   company: "TenantCloud LLC"
